2003-02-17 Vaclav Haisman <V.Haisman@sh.cvut.cz>

	* include/winioctl.h (FSCTL_SET_SPARSE): Define.

2003-02-12  Roland Schwingel  <roland.schwingel@onevision.de>

	* include/wingdi.h (AddFontResourceEx[AW]): Add.
	(RemoveFontResourceEx[AW]): Ditto
	(FR_PRIVATE): Define.
	(FR_NOT_ENUM): Define.
	* lib/gdi32.def (AddFontResourceEx[AW]): Add.
	(RemoveFontResourceEx[AW]): Ditto.

2003-02-10  Earnie Boyd  <earnie@users.sf.net>

	* include/w32api.h: Increment version to 2.3.
	* Makefile.in: Ditto.

2003-02-09  Earnie Boyd  <earnie@users.sf.net>

	* lib/ddk/ntoskrnl.def (Ke386IoSetAccessProcess): Activate export.
	(Ke386QueryToAccessMap): Ditto.
	(Ke386SetIoAccessMap): Ditto.
	Thanks to Marcel Telka <telka@users.sf.net>
	* include/secext.h: New file. Declare EXTENDED_NAME_FORMAT.
	* include/security.h: Include secext.h.
	* include/winbase.h: Declare COMPUTER_NAME_FORMAT.
	Thanks to Dimitri Papadopoulos <dimitri_at@users.sf.net>
	* include/GL/gl.h: Remove include of glext.h.
	Thanks to Greg Couch <gregcouch@users.sf.net>

2003-02-05  Earnie Boyd  <earnie@users.sf.net>

	* include/basetypes.h (_GUID_DEFINED): Add deprecation warning, start
	using GUID_DEFINED instead.
	* include/sqltypes.h: Ditto.
	* include/winnt.h: Ditto.
	* include/ddk/scsiwmi.h: Ditto.

2003-02-04  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/shlwapi.h (PathRelativePathTo[AW]): Correct
	prototypes.
	Thanks to: John Dallaway  <jld@ecoscentric.com>.

2003-02-01  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/commctrl.h (TCM_*): Add missing defines.

2003-02-01  Jesus Alvarez  <jesus_alvarez@users.sourceforge.net>
	    Danny Smith  <dannysmith@users.sourceforge.net>

	* include/prsht.h (PSP_*, PSH_*): Add missing defines.
	(PROPSHEETPAGE[AW]): Add pszHeaderTitle, pszHeaderSubTitle
	for (_WIN32_IE >= 0x0400).
	(PROPSHEETHEADER[AW]): Add hplWatermark and anonymous union
	fields for (_WIN32_IE >= 0x0400).

2003-01-31  Danny Smith  <dannysmith@users.sourceforge.net>
